A170_32865_Hw01_ChangKuan-Ping/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Skywonder\Desktop\170\Hw01\A170_32865_Hw01_ChangKuan-Ping
-d
C:\Users\Skywonder\Desktop\170\Hw01\A170_32865_Hw01_ChangKuan-Ping\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Skywonder\Desktop\170\Hw01\A170_32865_Hw01_ChangKuan-Ping\DisplayCube.java
<---- end of javadoc command ---->
Loading source file C:\Users\Skywonder\Desktop\170\Hw01\A170_32865_Hw01_ChangKuan-Ping\DisplayCube.java...
C:\Users\Skywonder\Desktop\170\Hw01\A170_32865_Hw01_ChangKuan-Ping\DisplayCube.java:32: error: ';' expected
		System.out.println("Greetings.")
		                                ^
1 error
